# fcitx5-voice-input

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
.github/actions/aur/: Dockerfile  action.yml  build.sh  prepare.sh
.github/workflows/: aur-release.yml  build.yml  release.yml
aur/: PKGBUILD
cmake/: FindPipeWire.cmake
po/: zh_CN.po
rpm/: fcitx5-voice-input.spec
src/addon/: engine.cpp  engine.h  types.h  voiceinput.conf.in
src/addon/asr/: asr_engine.h  command_engine.h  mimo_asr.cpp  mimo_asr.h  openai_asr.cpp  openai_asr.h  sherpa_asr.cpp  sherpa_asr.h
src/addon/capture/: pipewire_capture.cpp  pipewire_capture.h
src/addon/config/: config.cpp  config.h  voice-input-addon.conf  voiceinput-config.h
src/addon/llm/: llm_client.cpp  llm_client.h
src/addon/pipeline/: pipeline.cpp  pipeline.h
src/addon/utils/: audio_buffer.h  thread_safe_queue.h
src/addon/vad/: vad.cpp  vad.h
