cmake_minimum_required(VERSION 3.20)
project(fcitx5-voice-input VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# Include custom find modules
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

# ─── Options ─────────────────────────────────────────────────────────────────
option(ENABLE_SHERPA_ONNX "Enable local ASR via sherpa-onnx" OFF)
option(ENABLE_LLM_SUPPORT "Enable LLM post-processing (libcurl)" OFF)
option(BUILD_TESTS "Build unit tests" OFF)

# ─── Dependencies ─────────────────────────────────────────────────────────────
find_package(PkgConfig REQUIRED)

# Fcitx5 core — try "fcitx5" (Arch) then "Fcitx5Core" (Ubuntu/Debian)
pkg_check_modules(FCITX5 QUIET fcitx5)
if(NOT FCITX5_FOUND)
    pkg_check_modules(FCITX5 REQUIRED Fcitx5Core)
endif()

# PipeWire audio capture
pkg_check_modules(PIPEWIRE QUIET pipewire-0.3)
if(NOT PIPEWIRE_FOUND)
    pkg_check_modules(PIPEWIRE REQUIRED libpipewire-0.3)
endif()

# JSON parsing
find_package(nlohmann_json REQUIRED)

# HTTP client (for OpenAI-compatible ASR)
find_package(CURL REQUIRED)

# sherpa-onnx local ASR (optional)
if(ENABLE_SHERPA_ONNX)
    pkg_check_modules(SHERPA_ONNX sherpa-onnx)
    if(NOT SHERPA_ONNX_FOUND)
        message(FATAL_ERROR "ENABLE_SHERPA_ONNX=ON but sherpa-onnx not found via pkg-config")
    endif()
endif()

# ─── Sources ──────────────────────────────────────────────────────────────────
set(ADDON_SOURCES
    src/addon/engine.cpp
    src/addon/config/config.cpp
    src/addon/capture/pipewire_capture.cpp
    src/addon/vad/vad.cpp
    src/addon/pipeline/pipeline.cpp
    src/addon/asr/openai_asr.cpp
)

set(ADDON_HEADERS
    src/addon/engine.h
    src/addon/config/config.h
    src/addon/capture/pipewire_capture.h
    src/addon/vad/vad.h
    src/addon/asr/asr_engine.h
    src/addon/asr/openai_asr.h
    src/addon/pipeline/pipeline.h
    src/addon/utils/audio_buffer.h
    src/addon/utils/thread_safe_queue.h
)

# ─── Library ──────────────────────────────────────────────────────────────────
add_library(voice-input-addon SHARED ${ADDON_SOURCES} ${ADDON_HEADERS})

target_include_directories(voice-input-addon PRIVATE
    ${FCITX5_INCLUDE_DIRS}
    ${PIPEWIRE_INCLUDE_DIRS}
    ${nlohmann_json_INCLUDE_DIRS}
    ${CURL_INCLUDE_DIRS}
    src/addon
)

target_link_libraries(voice-input-addon PRIVATE
    ${FCITX5_LIBRARIES}
    ${PIPEWIRE_LIBRARIES}
    CURL::libcurl
)

target_compile_definitions(voice-input-addon PRIVATE
    VOICE_INPUT_VERSION="${PROJECT_VERSION}"
)

# ─── Optional: sherpa-onnx local ASR ─────────────────────────────────────────
if(ENABLE_SHERPA_ONNX AND SHERPA_ONNX_FOUND)
    list(APPEND ADDON_SOURCES src/addon/asr/sherpa_asr.cpp)
    list(APPEND ADDON_HEADERS src/addon/asr/sherpa_asr.h)
    target_include_directories(voice-input-addon PRIVATE ${SHERPA_ONNX_INCLUDE_DIRS})
    target_link_libraries(voice-input-addon PRIVATE ${SHERPA_ONNX_LIBRARIES})
    target_compile_definitions(voice-input-addon PRIVATE ENABLE_SHERPA_ONNX)
endif()

if(ENABLE_LLM_SUPPORT)
    target_compile_definitions(voice-input-addon PRIVATE ENABLE_LLM_SUPPORT)
endif()

# ─── Install ──────────────────────────────────────────────────────────────────
install(TARGETS voice-input-addon
    LIBRARY DESTINATION lib/fcitx5
)

install(FILES src/addon/config/voice-input-addon.conf
    DESTINATION share/fcitx5/addon
)

install(DIRECTORY models/
    DESTINATION share/fcitx5-voice-input/models
    OPTIONAL
)

# ─── Tests ────────────────────────────────────────────────────────────────────
if(BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()

# ─── Packaging ──────────────────────────────────────────────────────────────
set(CPACK_PACKAGE_NAME "fcitx5-voice-input")
set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Fcitx5 voice input addon")
set(CPACK_PACKAGE_VENDOR "devcxl")
set(CPACK_PACKAGE_CONTACT "64475363+devcxl@users.noreply.github.com")

# DEB package
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "devcxl <64475363+devcxl@users.noreply.github.com>")
set(CPACK_DEBIAN_PACKAGE_SECTION "libs")
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS ON)
set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "${url}")

include(CPack)
